非同期系まとめ

--- a/C#/非同期系メモ.md
+++ b/C#/非同期系メモ.md
@@ -1,10 +1,129 @@
 # 非同期系メモ
 
 [【C#】Task初心者のTask初心者によるTask初心者の為のTask入門](https://qiita.com/OXamarin/items/eddc9f7f01b691631887)  
+[Taskを極めろ！async/await完全攻略](https://qiita.com/acple@github/items/8f63aacb13de9954c5da)  
+
+TaskはUIスレッドを止めないための仕組み。  
+メインスレッド一本で処理するのが同期処理。  
+メインスレッド以外で処理するのが非同期処理。  
+メインスレッドには、必然的にUIスレッドが来るので、同期処理で重い処理を走らせたら画面が固まるのはこのため。  
+
+---
+
+## 非同期メソッド
+
+[C#_非同期メソッド / async / await](https://koshinran.hateblo.jp/entry/2018/05/13/101434)  
+
+- `async` をつけたメソッドのこと。  
+- メソッドの中で await を使えるようになる。  
+- 戻り値は必ず Task または Task\<T> になる。  
+- 複数のタスクの実行手順を記述した一つのタスク。作業手順書のようなもの。  
+
+await ：  
+指定した Task の完了を待ち、その結果を取りだす。  
+
+---
+
+## 非同期メソッドの「タスク」の意味
+
+非同期メソッドは作業手順書。  
+手順書ということは、書かれた通りの順序で実行していればいい、ということ。  
+言い換えると、「順序正しく実行されていれば、どのスレッドが実行しても構わない」ということになる。  
+つまり Task とはスレッドの存在を意識する必要がない単なる処理のまとまり。  
+
+``` C#
+    private void Main()
+    {
+        var get = Hoge();
+    }
+   
+    private async Task<int> Hoge()
+    {
+        await Task.Run( () => {
+            処理A;
+            処理B;
+        } );
+       
+        var c = await 処理C;
+        var d = await 処理D;
+       
+        return result;
+    }
+```
+
+・処理 C を実行するスレッドと、処理 D を実行するスレッドは別でも問題ない。  
+・同期処理を Task.Run でラップした場合「スレッドプール上で動作する一連の処理」となる。  
 
 ---
 
 ## Task
+
+[C#_Task とは](https://koshinran.hateblo.jp/entry/2018/05/12/132407)  
+[async/await を完全に理解する](https://zenn.dev/vatscy/articles/ba2263bdfadfeb805379)  
+[async/await を完全に理解してからもう少し理解する](https://zenn.dev/vatscy/articles/d4782637dd4257ef9822)  
+
+Task は非同期処理のことではない。  
+名の通り「仕事、課題、作業の最小単位」。  
+
+## Task.Run
+
+「タスクを生成し開始する」という意味。  
+実際の処理は別のだれかが裏で行う。  
+
+``` C#
+// 変数 task は「HogeA を実行後 HogeB を実行する、という『タスク』を作成してそれを開始したもの」を表わす。  
+var task = Task.Run(() =>
+{
+    HogeA();
+    HogeB();
+});
+```
+
+### Task.Run の使い方
+
+同期的な一連の処理を、一つのタスクとみなす。
+
+非同期タスクを組み合わせ、合成して、一つのタスクを組み上げるのが非同期メソッドだとしたら、その中に同期処理もタスクの一つとして組み込みたい時に使う。  
+
+もう一つ別の使い方はTask.Runの中に非同期ラムダ式を書くパターン。  
+これは、単純にその非同期メソッドを呼び出しているというもの。  
+
+これ以外の使い方をしているなら、それはTask.Runの濫用。  
+
+---
+
+スレッド：
+プログラムの処理の実行単位（ のひとつ ）。
+タスクやプロセスより細かい処理の実行単位が「スレッド」。
+プロセスのサブスレッドとして動作し、
+実行に必要なメモリ空間を複数のスレッドで共有。
+
+マルチスレッド：
+A という処理と B という処理を同時に行える。( 並行処理 )
+
+スレッドプール：
+スレッドの増加は ( スレッドを生成したり消したりして ) パフォーマンスへの影響が非常に大きい。
+故に、1 度作ったスレッドを可能な限り使いまわす仕組み。
+つまり、あらかじめスレッドを生成しておき、消さずに再利用する。
+1 ) 一定数のスレッドを常に立てておく。
+2 ) タスクを持たせておくためのキューを持つ。
+3 ) 処理中のタスクが終わり次第、次のタスクをキューから取り出して実行する。
+
+プロセス：
+プログラム実行の為の固有のメモリ空間を持っていおり、独立性の高い実行単位。
+単体で実行可能なプログラムの単位。
+複数のプロセスが存在する時は、それぞれ独立したアドレス空間を持つ。
+
+ファイバ
+スレッドをさらに軽量化したもの。
+
+タスク：
+曖昧。
+1 ) プロセスと同じ意味。
+2 ) スレッドのことを指す。
+3 ) プロセスよりも大きな集合を指す。
+
+---
 
 TaskクラスはStaticなので宣言する必要はなく、Runさせたい時はTask.Run()でよろしい。  
 New Task().Run()はできない。  
@@ -413,7 +532,132 @@ async await 同期 同じ c#
 何回もボタンを押した後で、〇〇のスレッドが終了しましたってのはそういう意味なのかもしれない？
 そのスレッドの処理が終わったことを通知するアナウンスなんだろうな。
 
-## Async Void と _ = Task.Run は同じか？
+---
+
+## async void
+
+async void ってなんだ？  
+→  
+イベントのためにしょうがなくある構文。  
+基本的に非同期処理は投げっぱなしになる模様。  
+
+[asyncの落とし穴Part3, async voidを避けるべき100億の理由](https://neue.cc/2013/10/10_429.html)  
+
+>自分で書く場合は、必ずasync Taskで書くべき、というのは非同期のベストプラクティスで散々言われていることなのですけれど、理由としては、まず、**voidだと、終了を待てないから**。  
+>voidだと、その中の処理が軽かろうと重かろうと、終了を感知できない。  
+>例外が発生しても分からない。投げっぱなし。  
+>これがTaskになっていれば、awaitで終了待ちできる。例外を受け取ることができる。  
+>await Task.WhenAllで複数同時に走らせたのを待つことができる。  
+>はい、async Taskで書かない理由のほうがない。  
+>んじゃあ何でasync voidが存在するかというと、イベントがvoidだから。  
+>はい。button_clickとか非同期対応させるにはvoidしかない。それだけです。  
+>なので、自分で書く時は必ずasync Task。async voidにするのはイベントだけ。これ絶対。  
+
+[C#_戻り値が void と Task の違い](https://koshinran.hateblo.jp/entry/2018/05/14/101108)  
+
+>戻り値が void だと await がついた処理がいつ完了するかわからない。  
+
+■await  
+Task 完了まで待つ、という意味なので同期的。  
+
+await しない場合、「誰かこの仕事実行して」と命令を投げるだけなのでタスク実行中に自分は本来の仕事の続きをこなせる。  
+戻り値 Task とすることで、その仕事の進捗状況を把握できる。  
+
+■戻り値 Task  
+「手順書に書かれた仕事が全て完了したことを報告する」ことになる。  
+非同期メソッドで戻り値を Task にした場合、自動的にメソッドが return した時に完了する Task となる。  
+
+■戻り値 void  
+「この Task を開始して」という命令をした後は、その命令したことを忘れる。  
+実害は、 void で実行した非同期メソッドの中で例外が発生した場合など、その例外はコード上で見つけることが出来なくなり、アプリケーションを殺す。  
+
+■非同期メソッドで戻り値 Task  
+
+``` C#
+    private async Task Hoge()    // 順次動作
+    {
+        await Task.Run(() => 処理A);
+        //処理 A を実行する、というタスクを開始して完了するまで待機。
+    }
+```
+
+↑ return は？  
+非同期メソッドで戻り値が Task の時、そのメソッドが return した時に完了する Task となる。  
+戻り値 Task と指定しても、返す必要がない ( 返せないもよう )。  
+Task\<T> とすると、 return で T 型が返る。  
+
+■非同期メソッドで戻り値 void (基本 NG )  
+
+``` C#
+    private async void Hoge()    // 順次動作
+    {
+        await Task.Run(() => 処理A);
+        //処理 A がいつ完了するか不明。完了するまで待機。
+    }
+```
+
+■同期メソッドで戻り値 void  
+
+``` C#
+    private void Hoge()    // 並列動作
+    {
+        Task.Run(() => 処理A);
+        // Task.Run が投げっぱ。処理 A の状態が分からない。
+        // 命令を投げるだけなので、 処理 A 実行中に自分自身は本来の仕事の続きができる。
+        // 戻り値が Task だと進捗状況を把握できる。
+    }
+```
+
+■同期メソッドで戻り値 Task  
+
+``` C#
+    private Task Hoge()    // 並列動作
+    {
+        var cs = new List<Fuga>;
+        for()
+        {
+            var c = Task.Run(() => 処理A);
+            cs.Add(c);    //処理 A を開始するというタスクを List にまとめる。
+        }
+        return Task.WhenAll(c);
+        //全ての Task が完了した時、完了扱いになる Task を生成。
+    }
+```
+
+**async void は禁止**  
+UI イベントハンドラ―に非同期メソッドを登録するのは void の必要があった。  
+UI から直接実行されるイベントの受け皿メソッドのみ、async void を使える。  
+それ以外は NG。  
+
+※  
+特定のスレッドに依存する処理 ( UI 操作など ) は、  
+本来非同期メソッド上で取り扱ってはいけない。( Task の思想ではそうなるはずだった )  
+
+同期メソッドの戻り値 void は、非同期メソッドでは戻り値 Task のこと。  
+同期メソッドの戻り値 T は、非同期メソッドでは戻り値 Task\<T> の T のこと。  
+
+## 投げっぱなしの非同期メソッドを使いたい場合、どうすればいいんでしょう？
+
+async Task メソッドをそのまま実行する。  
+
+``` C#
+public async Task<ActionResult> Index()
+{
+    // 警告抑制のため破棄で受ける
+    _ = ToaruAsyncMethod();
+    return View();
+}
+
+public async Task ToaruAsyncMethod()
+{
+    await Task.Delay(TimeSpan.FromSeconds(1));
+    Debug.WriteLine("hoge");
+}
+```
+
+---
+
+## async void と _ = Task.Run は同じか？
 
 [c# async voidでawait Task.Run()失敗の巻](https://qiita.com/twentyfourhours/items/3451f39567239f951a1a)  
 多分同じ。  
@@ -475,10 +719,6 @@ async await 同期 同じ c#
             Console.WriteLine("End " + id);
         }
 ```
-
----
-
-## Async void ってなんだ？
 
 ---
 
