--- a/Programming/オブジェクト指向プログラミング.md
+++ b/Programming/オブジェクト指向プログラミング.md
@@ -13,17 +13,18 @@
 
 [オブジェクト指向プログラミング](https://e-words.jp/w/%E3%82%AA%E3%83%96%E3%82%B8%E3%82%A7%E3%82%AF%E3%83%88%E6%8C%87%E5%90%91%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%9F%E3%83%B3%E3%82%B0.html)  
 
-``` txt
-オブジェクト指向プログラミングとは、コンピュータプログラムの構造、構成法の一つで、関連するデータの集合体と、それを操作する手続きを「オブジェクト」（object）と呼ばれるひとまとまりの単位として一体化し、オブジェクトの組み合わせとしてプログラムを記述する手法。
-オブジェクト指向によるソフトウェア開発は、異なるプログラムを組み合わせたり、後で部分的に再利用したりするのが容易になるという特徴がある。
-```
+>オブジェクト指向プログラミングとは、コンピュータプログラムの構造、構成法の一つで、関連するデータの集合体と、それを操作する手続きを「オブジェクト」（object）と呼ばれるひとまとまりの単位として一体化し、オブジェクトの組み合わせとしてプログラムを記述する手法。  
+オブジェクト指向によるソフトウェア開発は、異なるプログラムを組み合わせたり、後で部分的に再利用したりするのが容易になるという特徴がある。  
 
 [オブジェクト指向できていますか？](https://www.slideshare.net/MoriharuOhzu/ss-14083300)  
-
-``` txt
-小さな大量のオブジェクトがお互いにメッセージを送りながら協調し、複雑なシステムを構築する。  
+>小さな大量のオブジェクトがお互いにメッセージを送りながら協調し、複雑なシステムを構築する。  
 各クラスは1つの機能に集中し、最小限のインターフェースで構成される。  
-```
+
+→後で言及しているが、オブジェクト指向迷路になるのでやめたほうがいいと言われている。  
+
+[Taskを極めろ！async/await完全攻略](https://qiita.com/acple@github/items/8f63aacb13de9954c5da)  
+>オブジェクト指向というのは「有象無象の『値』の集まりに対して、クラスという枠組みを作り、その『値』に特別な性質と名前を与え、それを分類して管理していく」プログラミングスタイルのことです。  
+つまり、オブジェクト指向におけるクラスの「名前」というのは非常に重要で、例えば中身が全く同じであっても、その名前が違うだけで使い方が自然に変わっていくような、そんなハイコンテクストなプログラミング手法なのです。  
 
 ## オブジェクト指向を構成する要素
 
