--- a/Programming/非同期系まとめ.md
+++ b/Programming/非同期系まとめ.md
@@ -90,3 +90,5 @@ Console.WriteLine($"Worker threads={workerThreads}, Completion port threads={por
 スレッド（thread）は、CPU の数を超えて複数の処理を同時に実行するための仕組みです。  
 同時に実行するといっても、本当に並列に動いているわけではありません。  
 一定間隔で OS が処理を奪い、別のスレッドに切り替えることで、見かけ上の同時実行を実現しています。  
+
+[プロセス、スレッド、ファイバ、タスク、ジョブ、違いを整理してみよう](https://hiroakiuno.hatenablog.com/entry/20070316/p1)  
