--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -259,15 +259,44 @@ WebAssemblyを使えば、多様なアプリをWebアプリとして動かせる
 
 ---
 
-## C10k問題
+## C10K問題(クライアント1万台問題)
 
 >Wiki  
 >C10K問題（英語: C10K problem）とは、Apache HTTP ServerなどのWebサーバソフトウェアとクライアントの通信において、クライアントが約1万台に達すると、Webサーバーのハードウェア性能に余裕があるにも関わらず、レスポンス性能が大きく下がる問題である。  
+
+[スタバ方式で「C10K問題」を解消](https://xtech.nikkei.com/it/article/COLUMN/20120725/411441/)  
+お店のたとえ話で分かりやすい話があったと思ったが、多分これ。  
+
+>この考え方は、スターバックスの接客方式をイメージすると分かりやすい。  
+>客はレジで注文と支払いを済ませると、配膳口近くで注文した飲み物ができるのを待つ。  
+>飲み物ができたかどうかに関係なく、レジでは次々と注文を受け付ける。配膳口では、できた順に商品を客に渡す。  
+>このため昼時に多数の来客があっても、レジ前の行列はできにくい。  
+>Node.jsのメカニズムもこれに近い。時間がかかっている処理の完了を待つことなく、次の処理を実行する。  
+通信相手との同期をとらず、処理完了も待たず、一つのプロセスで次々と処理をこなす。  
+>そのため「非同期処理」とも呼ばれる。  
+
+いや微妙に違うな。
+確かアパッチは店員が1人1人に対して出てくるって話だった気がする。  
+でも、エンジンエックスはスタバ方式でって話だよな。  
+
+[NginxがどのようにしてC10K問題に対応しているのか？](https://qiita.com/uma002/items/9a365a46b8e6d1d18271)  
 
 ### 由来と読み方
 
 C(クライアント)10K(1万)問題  
 「シーテンケー・モンダイ」と読みます。  
+
+---
+
+## NginxとApatchの違い
+
+[](https://openstandia.jp/pdf/140228_osc_seminar_ssof8.pdf)  
+
+---
+
+## Node.js
+
+[Node.jsとはなにか？なぜみんな使っているのか？](https://qiita.com/non_cal/items/a8fee0b7ad96e67713eb)  
 
 ---
 
@@ -379,7 +408,7 @@ JavaSilverはLPICと同じ要領で自宅受験可能な模様。
 
 ---
 
-## x86, x64
+## x86,x64
 
 [【今更聞けない！】32bitと64bitの違いとは？ まとめ](https://eng-entrance.com/32bit-64bit#bit)  
 
@@ -496,4 +525,16 @@ Issueってなんすかね。
 ・Vueの最低限の実装とそこまでのまとめ
 
 [Prism入門 その5 - IEventAggregator](https://qiita.com/swd/items/2910c1d87a4c54f16077)  
+
+
+早く応用の結果わからねーかなー。
+後10日なんだけど、試験前は少しでも引き伸ばしたかったのに今は早く来ないか待ち遠しい。
+
+
+今日の夢で転職を強く意識したら、とりあえずエンジニアが会社をやめる理由から検索し始めた。
+
+てか、街頭に当たり散らすって相当だよなぁ。
+そんなに俺怒ってたのかなぁ。
+てか、あんなことがあるとボクシングマシーンが欲しくなるな。
+殴る蹴るをすると、確かにストレスが発散された。
 
