・疑問追加 ・整理

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -519,6 +519,9 @@ https://www.koekisha.co.jp/chiebukuro/difference02/
 チェリーピックってなんすかね。
 Issueってなんすかね。
 
+git rebase
+→勉強不足で痛い目にあってしまった。
+
 [イベントログの確認と保存](https://news.mynavi.jp/techplus/article/techp923/)  
 
 ・ASP.Net Core API + Vue axios 通信サンプル
@@ -526,15 +529,29 @@ Issueってなんすかね。
 
 [Prism入門 その5 - IEventAggregator](https://qiita.com/swd/items/2910c1d87a4c54f16077)  
 
+gc.collect  
+[C# 明示的にGC.Collect()を実施して直ぐにメモリを開放する](http://kazuki-room.com/execute_gc_collect_explicitly_to_release_the_memory_immediately/)  
 
-早く応用の結果わからねーかなー。
-後10日なんだけど、試験前は少しでも引き伸ばしたかったのに今は早く来ないか待ち遠しい。
+
+なんか人に会うのがいやになってきた。
+朝とか特に顕著だ。
+会社の人間に会いたくない。
+今日も仕事の夢を見た。
+転職を意識してからこんな感じだ。
+応用の合格発表の後は2連休なので、山田さんに相談いれたりとかいいかもね。
 
 
-今日の夢で転職を強く意識したら、とりあえずエンジニアが会社をやめる理由から検索し始めた。
+俺の市場価値ってどんなもんなんだろうか。
+500万は欲しいって思うけど、それくらいあるのだろうか。
 
-てか、街頭に当たり散らすって相当だよなぁ。
-そんなに俺怒ってたのかなぁ。
-てか、あんなことがあるとボクシングマシーンが欲しくなるな。
-殴る蹴るをすると、確かにストレスが発散された。
+転職を目指して勉強とか頑張ってきたけど、なんかそれだけだと駄目な気がするなぁ。
+調べ始めると自身がなくなってくる。
+30超えた場合にあったほうがいいスキルのレベルってどの程度なのだろうか。
 
+マジで山田さんに相談したい。
+何から始めて、どういうことして、エージェントはどこを使ったのかとか諸々ね。
+
+「て」って売った時の変換がやばいので、ひらがなでうつべし。
+sireからbigrobeへって時になんでbigrobeなのかって疑問は普通に出るよな。
+そういうところを説明できるべきなのではなかろうか。
+目指すべき方向ってのはそういうことなのではなかろうか。
