・github issues ・cherry pick ・プルリクエスト ・lpic101整理

--- a/LPIC/101/101復習.md
+++ b/LPIC/101/101復習.md
@@ -366,6 +366,45 @@ currentディレクトリへシンボリックリンクを更新する。
 
 ---
 
+## シンボリックリンク
+
+シンボリックリンクとは、OSのファイルシステムの機能の一つ。  
+特定のファイルやディレクトリを指し示す別のファイルを作成し、それを通じて本体を参照できるようにする仕組み。  
+リンクは本体と同じディレクトリに置いても良いが、通常は別の場所から参照できるようにするために作成される。  
+削除を指示するとシンボリックリンクが削除され、本体は影響を受けない。  
+存在しない（存在するかわからない）ファイルに対しても作成できるが、本体が移動したり改名すると参照できなくなる。  
+
+[参考](https://s-port.shinwart.com/tech-column/kawatama03/)
+
+### シンボリックリンクを作成するコマンド
+
+`ln -s`
+「ln」はファイルやディレクトリにリンクを張るコマンド、「-s」はシンボリックリンクを作成するオプションです。  
+
+`$ ln -s hoge hoge-s`  
+hogeはファイルのパス、hoge-sはリンク先のパスです。  
+ls -la で確認して、hoge-s -> hoge となればok。  
+
+### シンボリックリンクを変更するコマンド
+
+`ln -nfs`  
+「-n」はディレクトリとリンクを置き換えるオプション、「-f」は上書きするオプションです。
+
+`$ ln -nfs hoge hoge-n`  
+hogeはファイルのパス、hoge-nはリンク先のパスです。  
+ls -la で変更されていることを確認。  
+
+### シンボリックリンクを削除するコマンド
+
+「unlink」コマンドでシンボリックリンクを削除できます。  
+「rm」コマンドでも削除できるみたいですが、ミスすると色々恐いので「unlink」コマンドを使います。  
+
+`$ unlink hoge-s`  
+権限によって sudo 付けます。  
+ls -la で削除されていることを確認。  
+
+---
+
 ### UID
 
 UIDとは、複数の利用者（user）を一意に識別するための識別子（identifier）。  
