--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -513,6 +513,8 @@ Vueは最初の敷居が高い。
 呪文や決まり事を整えるのが一番きつい。
 それさえできてしまえば楽なのだが。  
 
+vue typescript class style
+
 ### ASP.Net Core API + Vue axios 通信サンプル
 
 [Vue3とaxiosで外部サイトにアクセス](https://akkunblog-happy-life.com/vue3-20/)  
@@ -533,14 +535,8 @@ Vueは最初の敷居が高い。
 似たようなことができないだろうか。  
 [PHP（サーバー）と C#（クライアント）で圧縮した文字列のやりとりをする](https://www.create-forever.games/php-csharp-gzip-encode-decode/)  
 
-
 https://www.mpuni.co.jp/products/ballpoint_pens/refill_jet.html
 https://www.koekisha.co.jp/chiebukuro/difference02/
-
-
-[【Git】cherry pick を理解する。そして各コミットを別々のブランチに振り分ける実践例](https://oki2a24.com/2016/12/25/cherry-pick-commits-to-another-branches-in-git/)  
-チェリーピックってなんすかね。
-Issueってなんすかね。
 
 [イベントログの確認と保存](https://news.mynavi.jp/techplus/article/techp923/)  
 
@@ -551,3 +547,33 @@ gc.collect
 
 [いま動いてるプロセスのユーザを知る方法ってあるでしょうか。](https://teratail.com/questions/247990)
 
+[NET Frameworkアプリケーションを64bit OS上で32bitモードで動かす方法(その2)](http://niyodiary.cocolog-nifty.com/blog/2009/05/net-framework-1.html)  
+
+## 文字列のインクリメント
+
+``` C#
+// https://baba-s.hatenablog.com/entry/2020/05/06/001800
+
+    // 元の数値の桁数を超えないように Math.Min を使用
+    // この処理を行わないと、例えば Item99 をインクリメントした時に
+    // Ite100 になってしまう
+    var valueString = new Regex("([0-9]*$)").Match(input).Value;
+    var value = int.Parse(valueString) + 1;
+    var digits = Math.Min(value == 0 ? 1 : (int)Math.Log10(value) + 1, valueString.Length);
+    var result = input.Remove(input.Length - digits, digits) + value;
+
+
+// https://tagsqa.com/detail/45665
+var match = Regex.Match("MD123", @"^([^0-9]+)([0-9]+)$");
+var num = int.Parse(match.Groups[2].Value);
+var after = match.Groups[1].Value + (num + 1);
+
+
+          var accountNo = new Func<string, string>((input) =>
+                {
+                    var valueString = new Regex("([0-9]*$)").Match(input).Value;
+                    var value = int.Parse(valueString) + 1;
+                    var digits = Math.Min(value == 0 ? 1 : (int)Math.Log10(value) + 1, valueString.Length);
+                    return input.Remove(input.Length - digits, digits) + value;
+                })(maxAccountNo);
+```
