--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -493,6 +493,21 @@ Google 自身も Google Photos などで TPU を使っています。
 
 ---
 
+## SQLServer 改行
+
+[T-SQL: 文字列に改行を挿入する](https://sql55.com/query/how-to-insert-carriage-return.php)  
+
+``` sql
+SELECT 'test1' + CHAR(13) + CHAR(10) + 'test2' AS 'CR+LF';
+
+-- 以下は改行されない
+SELECT 'test1' + CHAR(9) + 'test2' AS 'TAB';
+SELECT 'test1' + CHAR(10) + 'test2' AS 'LF';
+SELECT 'test1' + CHAR(13) + 'test2' AS 'CR';
+```
+
+---
+
 ## 雑記
 
 [新人「先輩、参照の値渡しについてちゃんと理解してますか？😊」](https://qiita.com/yoshi_10_11/items/1b70ccb859891b57cb5a)  
@@ -506,13 +521,12 @@ Google 自身も Google Photos などで TPU を使っています。
 どういうことしたのか気になる。  
 似たようなことができないだろうか。  
 [PHP（サーバー）と C#（クライアント）で圧縮した文字列のやりとりをする](https://www.create-forever.games/php-csharp-gzip-encode-decode/)  
+[ASP.NET Core のミドルウェア](https://docs.microsoft.com/ja-jp/aspnet/core/fundamentals/middleware/?view=aspnetcore-6.0)  
 
 https://www.mpuni.co.jp/products/ballpoint_pens/refill_jet.html
 https://www.koekisha.co.jp/chiebukuro/difference02/
 
 [イベントログの確認と保存](https://news.mynavi.jp/techplus/article/techp923/)  
-
-[Prism入門 その5 - IEventAggregator](https://qiita.com/swd/items/2910c1d87a4c54f16077)  
 
 gc.collect  
 [C# 明示的にGC.Collect()を実施して直ぐにメモリを開放する](http://kazuki-room.com/execute_gc_collect_explicitly_to_release_the_memory_immediately/)  
@@ -520,3 +534,62 @@ gc.collect
 [いま動いてるプロセスのユーザを知る方法ってあるでしょうか。](https://teratail.com/questions/247990)
 
 [NET Frameworkアプリケーションを64bit OS上で32bitモードで動かす方法(その2)](http://niyodiary.cocolog-nifty.com/blog/2009/05/net-framework-1.html)  
+
+[【WPF】フォーカス遷移について知っておきたい３つのキーワード](https://qiita.com/furugen/items/40dae26ef6684dac7fc7)  
+[Prism入門 その5 - IEventAggregator](https://qiita.com/swd/items/2910c1d87a4c54f16077)  
+[修飾語](https://sho.benesse.co.jp/qat/j/23.html)  
+
+[変数の渡し方 ref out in](https://qiita.com/muniel/items/02de40a7d806a39b91c1)  
+[C#における値と参照](https://qiita.com/Tokeiya/items/365b3c5b613868f4c928)  
+
+
+
+最初の実行から条件が駄目なので実行はされない。
+
+``` C#
+for (int i = 1 ; i < 0 ; i++) {
+    _ = 1;
+}
+```
+
+
+備長炭買うか。
+予備が差なすぎてつっかえる。
+ここら辺のストレスはなくしたい。
+
+
+
+Vue開発においてクラス記法でプロジェクトを生成する方法は分かった。
+まずはそこまでをまとめたいところである。
+後はオブジェクト指向がなんちゃら系をまとめて、標準入力からじゃんけんプログラムを作るやつもやらないと。
+
+
+デザインパターンは言語の機能不足を補うためのベストプラクティス。
+言語がその機能を補ってくれれば、わざわざ実装する必要はなくなる。
+事実、新しい言語においては実装する意味がなくなったに等しいパターンは難点は存在するという話。
+
+
+
+全身がいたい。
+動けないほどではないが痛い。
+上半身をひねる動作は脇の下がいたくなる。
+
+左の太ももの痛みが右側と違うってことは庇っているということだろう。
+庇わないほうがおかしい。
+
+
+腹もいたい。
+V字腹筋かなりいいかもしれん。
+これからもこれをやっていこう。
+
+
+あっかん。マジで具合悪い。
+昨日の疲れが抜けてない。
+筋肉痛がしんどい。
+昨日はあまり眠れなかったし、それも痛い。
+
+てか、思ったけど、寝る時に涙を流す日ってたいてい眠れない気がする。
+すぐに眠れる日は、そんなことしてる余裕もなしに寝ちゃうからね。
+
+
+
