--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -493,6 +493,10 @@ Google 自身も Google Photos などで TPU を使っています。
 
 ---
 
+## O/R mapper
+
+---
+
 ## 雑記
 
 [新人「先輩、参照の値渡しについてちゃんと理解してますか？😊」](https://qiita.com/yoshi_10_11/items/1b70ccb859891b57cb5a)  
@@ -537,5 +541,75 @@ for (int i = 1 ; i < 0 ; i++) {
 }
 ```
 
+
+
+オブジェクト指向は部品の組み合わせでプログラムするようなスタイル。
+
+処理とデータをまとめて、それに名前をつけて、お互いにメッセージをやり取りすることを目指したスタイル。
+
+ではなぜオブジェクト指向は難しいのか？
+何が難しいのか？
+
+
+車があったとして、プリウスを作りたいとなった時に、
+車という実態はないのでそれは抽象クラスとし、車が持つ共通の性質をまとめる。
+車にはガス車、電気自動車、ハイブリッド車等、エンジンという部品からして種類が分かれる。
+なので、そういうのは電気で走れるインターフェースを定義することで、～～
+後は、モーターモジュールとして、各種性能の違う製品を設計し、それはもちろん電気インターフェースを持っているので、電気自動車として設計された車に実装可能。
+そういう風に部品を組み合わせて設計図(クラス)をデザインし、newすることでドンと目の前に製品が出来上がるというイメージ。
+最近考えてるのはこういうこと。
+
+データと処理をひとまとめにするなら構造化プログラミングでもできる。
+もっとも違うのはデータ中心にまとめるかどうかとういうことか？
+
+車の例にたとえなくても、パソコンでもいいだろう。
+メモリというパーツ。メモリを接続するためのPCIExpressというインターフェース。
+それらを実装したクラス。
+メモリはないので、メモリという抽象クラスを継承した型番○○というメモリを定義して、PCIExpressインターフェースを実装することで、メモリを設計する。
+new したらポンを目の前にメモリが落ちる。
+後はそれをマザーボードに取り付ける。
+インターフェースが違ったらもちろん取り付けられない。
+そういう組み合わせをするのがオブジェクト指向であり、現実をデザインできるというのはそういうことではと個人的に思っている。
+
+そういう例で考えるのはいいんだけど、実務に落とし込んだ時、とりわけCRUD処理しかしないシステムにおいてオブジェクト指向はどうなるべきか答えが出ていない。
+データ中心に考えるならORマッパーでそのテーブルと処理をひとまとめにして、～～～みたいな感じでまとめるしかないような。
+その際、抽象的な概念なんてないし、インターフェースも必要か怪しい。
+データベースに保存するSave関数を各クラスが持っているなら、名前が違うだけで動作が異なるポリモーフィズムは実現できるし、不要なデータを外部に公開しないカプセルかも実現できる。
+継承は場合によってかもしれないが、データで明確に分かれているなら無理に継承する必要はないんじゃないかって思う。
+せめてインターフェースでどういうデータでつながるかって定義する程度ではなかろうか。
+
+
+
+
+昨日久しぶりに煮沸消毒したよな。
+やっぱり、やると匂いが全然違う。
+消毒すると決めたなら、迷わず実行することができる。
+やったきっかけは匂いも去ることながら、ハンカチに黄色い斑点があったから。
+さすがにさぼりすぎたと思って熱湯にぶち込んだ。
+
+
+なんだかんだポイントキャンペーン全部対応してしまったな。
+次は椅子だな。
+やっぱりいい椅子が欲しい。
+こっちにいる間に椅子を処分したい。
+
+
+
+回復優先で動いたので今日は幾分ましである。
+報告書を見ると、案の定遅くまで残っていたようで、笹田さんに至っては23時まで残っていた。
+さすがにそこまで付き合ってられない。
+損な立ち回りばっかりしてるなと思う。
+
+
+
+最近、朝、ものすごく遅く来てるけど、早く出て近くの公園で時間をつぶすとか、遠回りで出社してみるとか、そういうことすればいいなって気が付いた。
+
+近くの公園は会社から丸見えなので何か代替案を探したいところではある。
+遠回りが安パイだろうか。
+近くの公園を探してみたが、こぶし公園以外はまともなところがなさそう。
+公園でなくてもいいから、どこか近くで腰を落ち着けるところはないものかねぇ。
+てか、今日は25分に来たけど、もっとギリギリに来る人がいることに驚いた。
+よくそんなギリギリにきて心臓が持つな。
+俺なら焦ってそれどころではない。耐えられない。
 
 
