・ORマッパー ・インピーダンスミスマッチ ・じゃんけん

--- a/Programming/オブジェクト指向プログラミング.md
+++ b/Programming/オブジェクト指向プログラミング.md
@@ -82,3 +82,54 @@
 オブジェクト指向迷路ができるだけだ。  
 
 ---
+
+## オブジェクト指向についてごちゃごちゃ
+
+オブジェクト指向は部品の組み合わせでプログラムするようなスタイル。
+
+処理とデータをまとめて、それに名前をつけて、お互いにメッセージをやり取りすることを目指したスタイル。
+
+ではなぜオブジェクト指向は難しいのか？
+何が難しいのか？
+
+
+車があったとして、プリウスを作りたいとなった時に、
+車という実態はないのでそれは抽象クラスとし、車が持つ共通の性質をまとめる。
+車にはガス車、電気自動車、ハイブリッド車等、エンジンという部品からして種類が分かれる。
+なので、そういうのは電気で走れるインターフェースを定義することで、～～
+後は、モーターモジュールとして、各種性能の違う製品を設計し、それはもちろん電気インターフェースを持っているので、電気自動車として設計された車に実装可能。
+そういう風に部品を組み合わせて設計図(クラス)をデザインし、newすることでドンと目の前に製品が出来上がるというイメージ。
+最近考えてるのはこういうこと。
+
+データと処理をひとまとめにするなら構造化プログラミングでもできる。
+もっとも違うのはデータ中心にまとめるかどうかとういうことか？
+
+車の例にたとえなくても、パソコンでもいいだろう。
+メモリというパーツ。メモリを接続するためのPCIExpressというインターフェース。
+それらを実装したクラス。
+メモリはないので、メモリという抽象クラスを継承した型番○○というメモリを定義して、PCIExpressインターフェースを実装することで、メモリを設計する。
+new したらポンを目の前にメモリが落ちる。
+後はそれをマザーボードに取り付ける。
+インターフェースが違ったらもちろん取り付けられない。
+そういう組み合わせをするのがオブジェクト指向であり、現実をデザインできるというのはそういうことではと個人的に思っている。
+
+そういう例で考えるのはいいんだけど、実務に落とし込んだ時、とりわけCRUD処理しかしないシステムにおいてオブジェクト指向はどうなるべきか答えが出ていない。
+データ中心に考えるならORマッパーでそのテーブルと処理をひとまとめにして、～～～みたいな感じでまとめるしかないような。
+その際、抽象的な概念なんてないし、インターフェースも必要か怪しい。
+データベースに保存するSave関数を各クラスが持っているなら、名前が違うだけで動作が異なるポリモーフィズムは実現できるし、不要なデータを外部に公開しないカプセルかも実現できる。
+継承は場合によってかもしれないが、データで明確に分かれているなら無理に継承する必要はないんじゃないかって思う。
+せめてインターフェースでどういうデータでつながるかって定義する程度ではなかろうか。
+
+
+
+じゃんけんプログラム
+判定部分、手は数字で定義して、その大小関係で判断する？
+大小だ。大きいほうが勝ち、となるかな。
+後はランダム関数を実行して、それを整数に変換してだな。
+
+俺がやっているのは構造化プログラムのほうだったか。
+でも、いい機会だからこれを機に構造化プログラムとオブジェクト指向プログラミングの違いを確認しようではないか。
+てか、そう考えると業務もほとんどこの考え方でしかやってないってことだよなぁ。
+うーん。
+あぁ、そうか。
+俺が知りたかったのは、オブジェクト指向が抽象だのなんだのって事じゃなくて、こういうマクロ的な例題だったんだ。
