--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -696,3 +696,47 @@ for (int i = 1 ; i < 0 ; i++) {
     _ = 1;
 }
 ```
+
+
+あかんなー、この状況。
+結局何やっても変わらん。
+詰みだな。。。
+
+
+仕事始まった途端だるさが半端ない。
+昨日の映画の影響でまだ落ち込んでる。
+いや、マジで具合悪い。
+
+どんなに頑張っても、こんな俺がいけるのか、という思いは常にある。
+どんなに分析しても駄目な自分しか出てこない。
+
+
+
+応用情報は個人的には頑張ったけど、そこまでやっても単なる通過点でしかないのがなぁ
+本当に最低限のチケットでしかない。
+ベストは高度情報を持っていることだな。
+後は動機が明確であること。
+
+
+こんな状況が続いているからメンタルがやられているだけだと信じたい。
+が、それは意味ないだろう。
+どう考えても俺が悪いのは変わらないはずだ。
+
+
+身体的には問題ないが、精神的に思い。
+天気も相まって気分が悪い。
+ネガティブな考えばかりが浮かんでしまう。
+
+
+昨日の居林さんの報告書が上がっていないのと、ロケチャの内容から察するにクソ忙しかったのだろう。
+
+
+
+なんとなく、イラストレーターの一日の作業風景を見たけど、あれを見る限り8時間でできることなんて大したことないなって思える。
+うー・・・・
+すごく自信なくなってきた・・・。
+やっぱり30代のてんしく　って難しいんだなぁ・・・。
+こりゃあ応用を1つ取ったところでどうこうなる問題ではないなぁ・・・。
+やべーーかも。
+
+
