・windows認証 ・じゃんけん整理 ・整理

--- a/Programming/じゃんけんプログラム.md
+++ b/Programming/じゃんけんプログラム.md
@@ -27,10 +27,7 @@
 
 ``` C#
 using System;
-using System.Collections.Generic;
 using System.Linq;
-using System.Text;
-using System.Threading.Tasks;
 
 namespace janken
 {
@@ -41,6 +38,7 @@ namespace janken
     {
         private int Player1WonCount { get; set; }
         private int Player2WonCount { get; set; }
+        private static readonly Random Random = new Random();
 
         public void Execute()
         {
@@ -48,12 +46,13 @@ namespace janken
 
             for (int i = 0; i < 3; i++)
             {
-                Console.WriteLine($"【{i:D}回戦目】");
+                Console.WriteLine($"【{i + 1:D} 回戦目】");
                 // 手を決める
-                HandEnum Player1Hand = GetHand();
-                HandEnum Player2Hand = GetHand();
+                HandEnum player1Hand = GetHand();
+                HandEnum player2Hand = GetHand();
+                Console.WriteLine($"{HandDictionary.HandDict.FirstOrDefault(f => f.Key == player1Hand).Value} vs. {HandDictionary.HandDict.FirstOrDefault(f => f.Key == player2Hand).Value}");
                 // 判定
-                JudgAndCount(Player1Hand, Player2Hand);
+                JudgAndCount(player1Hand, player2Hand);
             }
 
             Console.WriteLine("【じゃんけん終了】" + Environment.NewLine);
@@ -62,20 +61,16 @@ namespace janken
             LastJudg();
         }
 
-
         public HandEnum GetHand()
         {
-            int randNum = new Random().Next(0, 2);
+            int randNum = new Random(Random.Next()).Next(3);
             switch (randNum)
             {
                 case 0:
-                    System.Console.WriteLine("グー");
                     return HandEnum.STONE;
                 case 1:
-                    System.Console.WriteLine("チョキ");
                     return HandEnum.SCISSORS;
                 case 2:
-                    System.Console.WriteLine("パー");
                     return HandEnum.PAPER;
             }
             return HandEnum.STONE;
@@ -86,23 +81,19 @@ namespace janken
             // P1が勝つ手
             if ((player1 == HandEnum.STONE && player2 == HandEnum.SCISSORS)
                 || (player1 == HandEnum.SCISSORS && player2 == HandEnum.PAPER)
-                || (player1 == HandEnum.PAPER && player2 == HandEnum.STONE)
-                )
+                || (player1 == HandEnum.PAPER && player2 == HandEnum.STONE))
             {
-                this.Player1WonCount++;
-                Console.WriteLine("プレイヤー1が勝ちました。" + Environment.NewLine);
+                Player1WonCount++;
                 Console.WriteLine("プレイヤー1が勝ちました。" + Environment.NewLine);
             }
             // P2が勝つ手
             else if ((player2 == HandEnum.STONE && player1 == HandEnum.SCISSORS)
                 || (player2 == HandEnum.SCISSORS && player1 == HandEnum.PAPER)
-                || (player2 == HandEnum.PAPER && player1 == HandEnum.STONE)
-                )
+                || (player2 == HandEnum.PAPER && player1 == HandEnum.STONE))
             {
-                this.Player2WonCount++;
+                Player2WonCount++;
                 Console.WriteLine("プレイヤー2が勝ちました。" + Environment.NewLine);
             }
-            // 引き分け
             else
             {
                 Console.WriteLine("引き分けです。" + Environment.NewLine);
@@ -121,7 +112,6 @@ namespace janken
             {
                 Console.WriteLine($"{Player1WonCount}対{Player2WonCount}でプレイヤー2の勝ちです。");
             }
-            // 引き分け
             else
             {
                 Console.WriteLine($"{Player1WonCount}対{Player2WonCount}で引き分けです。" + Environment.NewLine);
@@ -141,7 +131,6 @@ using System.Linq;
 
 namespace janken
 {
-
     /// <summary>
     /// オブジェクト指向プログラミング版じゃんけん
     /// </summary>
@@ -275,7 +264,7 @@ namespace janken
             /// <returns></returns>
             public HandEnum ShowHand(Random rand)
             {
-                HandEnum hand = 0;
+                HandEnum hand = HandEnum.STONE;
                 switch (rand.Next(3))
                 {
                     case 0:
