--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -653,6 +653,64 @@ Apache Project におけるコントリビュータは、JIRA にパッチを投
 
 ---
 
+## Windows認証
+
+[「分かりそう」で「分からない」](https://wa3.i-3-i.info/word13296.html)  
+Windowsパソコンにログインするときに使った認証情報を使いまわしてやる認証  
+「Windows認証」という用語を見かけるのは、おそらくIISかSQLServerの話でしょう。  
+
+今回はSQLServerを例に説明します。  
+SQLServerの場合、認証のやり方は2種類あります。  
+
+1つは、普通にIDとパスワードを入れて認証するやり方です。  
+これを「**SQLServer認証**」と言います。  
+
+もう1つは、Windowsパソコンにログインするときに使った認証情報を使いまわして認証するやり方です。  
+これが**Windows認証**です。  
+
+例えば、パソコンに「ピヨ太」「ピヨ子」「アクマ」の3人のユーザが設定されていたとしましょう。  
+「ピヨ太」「ピヨ子」「アクマ」のどれかでログインすれば、パソコンを使うことができます。  
+
+それに対して、SQLServerには「『ピヨ太』だけ使って良いよ」と設定されていたとしましょう。  
+そうすると「ピヨ太」でパソコンにログインしている場合は、SQLServerを使えます。  
+「ピヨ子」か「アクマ」でログインしている場合は、SQLServerが使えない状態になります。  
+
+このような結果になるのは、SQLServerを使って良いか判定する認証において、Windowsにログインするときに使った認証情報を使いまわしているからです。  
+
+これがWindows認証です。  
+ですから、SQLServerを使おうとしたときに、改めてIDとパスワードを入力する必要はありません。  
+
+---
+
+## Dapper where in
+
+[SELECT * FROM X WHERE id IN (...) with Dapper ORM](https://stackoverflow.com/questions/8388093/select-from-x-where-id-in-with-dapper-orm)  
+
+``` C#
+string sql = "SELECT * FROM SomeTable WHERE id IN @ids"
+var results = conn.Query(sql, new { ids = new[] { 1, 2, 3, 4, 5 }});
+```
+
+---
+
+## 文字列結合した結果でJOIN
+
+[【SQL】JOIN(結合)でLIKEを使ってSELECTをしてみる](https://buralog.jp/sql-join-like-operator/)  
+
+普通に実現可能。
+CONCAT関数。  
+
+``` sql
+SELECT *
+FROM
+    [TFr_Slip]
+    JOIN [TCs_AccountsReceivablePayment]
+    ON [TFr_Slip].[OfficeCD] = [TCs_AccountsReceivablePayment].[OfficeCD]
+    AND CONCAT([TFr_Slip].[SlipID],FORMAT([TFr_Slip].[DetailNo],'000000')) = [TCs_AccountsReceivablePayment].[PaymentSlipID]
+```
+
+---
+
 ## 雑記
 
 [新人「先輩、参照の値渡しについてちゃんと理解してますか？😊」](https://qiita.com/yoshi_10_11/items/1b70ccb859891b57cb5a)  
@@ -697,46 +755,4 @@ for (int i = 1 ; i < 0 ; i++) {
 }
 ```
 
-
-あかんなー、この状況。
-結局何やっても変わらん。
-詰みだな。。。
-
-
-仕事始まった途端だるさが半端ない。
-昨日の映画の影響でまだ落ち込んでる。
-いや、マジで具合悪い。
-
-どんなに頑張っても、こんな俺がいけるのか、という思いは常にある。
-どんなに分析しても駄目な自分しか出てこない。
-
-
-
-応用情報は個人的には頑張ったけど、そこまでやっても単なる通過点でしかないのがなぁ
-本当に最低限のチケットでしかない。
-ベストは高度情報を持っていることだな。
-後は動機が明確であること。
-
-
-こんな状況が続いているからメンタルがやられているだけだと信じたい。
-が、それは意味ないだろう。
-どう考えても俺が悪いのは変わらないはずだ。
-
-
-身体的には問題ないが、精神的に思い。
-天気も相まって気分が悪い。
-ネガティブな考えばかりが浮かんでしまう。
-
-
-昨日の居林さんの報告書が上がっていないのと、ロケチャの内容から察するにクソ忙しかったのだろう。
-
-
-
-なんとなく、イラストレーターの一日の作業風景を見たけど、あれを見る限り8時間でできることなんて大したことないなって思える。
-うー・・・・
-すごく自信なくなってきた・・・。
-やっぱり30代のてんしく　って難しいんだなぁ・・・。
-こりゃあ応用を1つ取ったところでどうこうなる問題ではないなぁ・・・。
-やべーーかも。
-
-
+AP021-0028
