にｋっき、せいり

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -745,7 +745,7 @@ gc.collect
 [変数の渡し方 ref out in](https://qiita.com/muniel/items/02de40a7d806a39b91c1)  
 [C#における値と参照](https://qiita.com/Tokeiya/items/365b3c5b613868f4c928)  
 
-
+[ストップforeach！LINQで集合/結合する](https://qiita.com/i-tanaka730/items/3e6b560e80f1395ae8ea)  
 
 最初の実行から条件が駄目なので実行はされない。
 
@@ -755,4 +755,67 @@ for (int i = 1 ; i < 0 ; i++) {
 }
 ```
 
+
+
+・三浦母に名指しで呼ばれて頼りにされてうれしかった
+・応用情報合格発表→合格!!!!!!!!!
+
+
 AP021-0028
+https://web10.jitec.ipa.go.jp/js/input.html?examCode=AP
+
+合格率 24.3%
+https://www.ipa.go.jp/about/press/20220624.html
+普通に高いほうだと思ったけど、元年や俺が落ちた年でも24とか23なので、例年通りなのかもしれない。
+
+
+
+確実に嬉しいことが1つあった。
+三浦さんのお母さんに頼られたことだ。
+人って頼られるとこんなに気持ちが満たされるものなんだなって思った。
+
+
+何も考えない時間が心地よかった。
+早めに出て公園でボーっとしたけど、気持ちよかった。
+だけど、あそこ萬君が来るのね。
+朝ごはんをあそこで食べるらしい。
+
+
+確実に行動にも表れ始めた。
+狙って一番遅い時間に出社するようになった。
+
+
+今日は雨なので車がすごかった。
+めっちゃ混んでて、みんな時間に終われて運転が荒かったので、事故らないか心配だった。
+
+
+腕が筋肉痛。
+喜ばしいことだ。
+
+
+髪が乱れてきたので少し調整したい。
+
+
+今日もやばいので、エナドリも持ってきた。
+朝起きたら時点でめっちゃ辛かった。
+寝不足ってのもあるが、やっぱりてんしくを考え始めたら今の俺では役不足な気がしてならないからだ。
+頑張ったんだけどなぁ・・・。肝心の成果を残せていないからなぁ・・・。
+
+
+
+うかった・・・・・・・・・・・・・・・・・・・・・・・・・・・・・
+合格した・・・・・・・・・・・・・・
+早く家族に伝えたい。
+
+心臓がバクバクした。
+あり得ないくらいバクバクした。
+
+
+少し落ち着いた。
+冷静になってみたらこれは通過点でしかない。
+でもって、社会人2年目で合格している人や1発で合格している人もいる。
+俺なんて全然なんだ。
+そのことを忘れてはならない。
+
+
+
