２連休の成果

--- a/AppliedInformation/応用情報令和4年春季反省.md
+++ b/AppliedInformation/応用情報令和4年春季反省.md
@@ -2,7 +2,15 @@
 # 応用情報令和4年春季反省
 
 午前:85点→68問正解,12問不正解  
-午後:??  
+午後:83点  
+
+AP021-0028  
+86613144  
+<https://web10.jitec.ipa.go.jp/js/input.html?examCode=AP>  
+
+合格率 24.3%  
+<https://www.ipa.go.jp/about/press/20220624.html>  
+普通に高いほうだと思ったけど、元年や俺が落ちた年でも24とか23なので、例年通りなのかもしれない。  
 
 ---
 
@@ -41,10 +49,30 @@
 
 ## 総評
 
-あれで受からなかったら今後も無理だわ。
-今年はあたり。
-本当に当たり。
-このチャンスを逃したらマジで次はない。
+あれで受からなかったら今後も無理だわ。  
+今年はあたり。  
+本当に当たり。  
+このチャンスを逃したらマジで次はない。  
+
+---
+
+## 終わってみて
+
+ネットワークが一番やらかしたかも、という予感は当たっていて、一番間違えていた。  
+見直してみるとチンプンカンプンな回答してる。  
+ルーティングの知識は必要かもしれないが、プロキシをはさんだ場合の動作についてはちゃんと問題文に書かれていた。  
+なぜあのような回答をしたのか甚だ疑問だ。  
+
+それ以外は普通に問題なかった。  
+結果を待っている間、あれは大丈夫か、あれは大丈夫かと、気が気でなかったが、杞憂だった。  
+
+やっていても簡単だと思っていたのもあり、7章と8章が得点源になっていた。  
+ただ、全問正解には至っていなかった。  
+
+セキュリティは1つだけ思いっきりわからないのがあったが、それ以外は普通にできていた。  
+問題が雑だなぁと思いながら解いていた気がする。  
+
+データベースは少し自信がなかったけど、これも問題なかった。  
 
 ---
 
@@ -143,7 +171,7 @@
 WAF
 
 ## 3
-イ、ウ、エ
+イ、ウ、エ × イ、ウ
 
 ## 4
 ゼロデイ攻撃
@@ -151,36 +179,35 @@ WAF
 ウ
 
 ア
-
 R社インシデント対応チーム
 
-NLAS
+NLAS × SIEM
 ```
 
 ## ネットワーク
 
 ``` txt
 ## 1
-営業所のNPC
+宛先IPアドレス   : 営業所のNPC × プロキシサーバー
+送信元IPアドレス : Mサービス × 営業所のNPC
 
-Mサービス
-
-FW、プロキシ、ルータ
+FW、プロキシ、ルータ △ ルータ、FW、プロキシサーバー
 
 外部DNSサーバ
 プロキシサーバ
 内部DNSサーバ
 
 ## 2
-L3SW
+L3SW × ISサーバ
 
 ## 3
 宛先がq-SaaSの通信はIPSec1を通す経路を追加する
+→
+回答)q-SaaS宛ての通信のネクストホップがIPsecルータ1となる経路
 
 ## 4
 q-SaaS
-インターネット
-
+インターネット × 営業所LAN
 ```
 
 ## データベース
@@ -195,17 +222,15 @@ ALTER TABLE
 
 1枚のクーポンは1つの予約にだけ利用できるようにするため
 
-
 ## 2
 クーポン発行連番
-
 
 ## 3
 SET 発行済枚数 = 発行済枚数 + 1
 発行上限枚数
 
 ## 4
-U
+U × RU
 C
 ```
 
@@ -213,7 +238,7 @@ C
 
 ``` txt
 ## 1
-t2-t1+Ta
+t2-t1+Ta △ (t2-t1)+Ta
 
 ## 2
 60秒
@@ -225,13 +250,13 @@ t2-t1+Ta
 遠隔撮影開始イベント
 自動撮影タイマ通知イベント
 
-①,⑦
+①,⑦ × ①③⑦
 
 ## 4
 バッファにある時点までの動画データを送信中に先頭から新しく書き込まれるため
 
-最後
-先頭
+最後 △ 終端
+先頭 △ 始端
 リングバッファ
 ```
 
@@ -241,7 +266,10 @@ t2-t1+Ta
 ## 1
 H社、S社、T社
 
-20220510 1800 G0030110 8
+20220510
+1800
+G0030110
+8
 
 ## 2
 ア、エ
@@ -251,8 +279,66 @@ H社、S社、T社
 
 ## 4
 ヘッダレコードのデータレコード件数
-受信したデータレコード数
+受信したデータレコード数 × 処理したデータレコードの件数
 
 ## 5
 取得できなかった事業者の空席数にnullを設定する
 ```
+
+---
+
+午前問題1
+
+浮動小数点数を，仮数部が7ビットである表示形式のコンピュータで計算した場合，情報落ちが発生しないものはどれか。  
+ここで，仮数部が7ビットの表示形式とは次のフォーマットであり，( )2内は2進数，Yは指数である。また，{ }内を先に計算するものとする。  
+
+$(1.X_1X_2X_3X_4X_5X_6X_7)^2×2^Y$
+
+${(1.1)_2×2^{-3}＋(1.0)_2×2^{-4}}＋(1.0)_2×2^5$  
+${(1.1)_2×2^{-3}－(1.0)_2×2^{-4}}＋(1.0)_2×2^5$  
+${(1.0)_2×2^5＋(1.1)_2×2^{-3}}＋(1.0)_2×2^{-4}$  
+${(1.0)_2×2^5－(1.0)_2×2^{-4}}＋(1.1)_2×2^{-3}$  
+
+回答  
+
+情報落ちは、浮動小数点演算において、絶対値の大きな数と絶対値の小さな数の加減算を行ったとき、絶対値の小さな数の有効けたの一部または全部が結果に反映されないことをいいます。  
+一般的に数多くの数値の加算を行う場合には、絶対値の小さなものから順番に計算すると情報落ちを抑制することができます。  
+
+浮動小数点数同士の計算では、指数が小さい方の仮数部を指数が大きい方に揃え、仮数部同士を演算します。  
+実際に計算していくと以下のようになります。  
+
+{(1.1)2×2-3＋(1.0)2×2-4}＋(1.0)2×25
+　(1.1)2×2-3＋(1.0)2×2-4
+＝(1.1)2×2-3＋(0.1)2×2-3 （指数部を-3に揃える）
+＝(10.0)2×2-3＝(1.0)2×2-2
+　(1.0)2×2-2＋(1.0)2×25
+＝(0.0000001)2×25＋(1.0)2×25（指数部を5に揃える）
+＝(1.0000001)2×25
+情報落ちは発生しないので、本肢が正解となります。
+
+{(1.1)2×2-3－(1.0)2×2-4}＋(1.0)2×25
+　(1.1)2×2-3－(1.0)2×2-4
+＝(1.1)2×2-3－(0.1)2×2-3 （指数部を-3に揃える）
+＝(1.0)2×2-3
+　(1.0)2×2-3＋(1.0)2×25
+＝(0.00000001)2×25＋(1.0)2×25（指数部を5に揃える）
+→(1.0)2×25（情報落ちが発生）
+必要な仮数部が8ビットとなり、7ビットの仮数部からあふれた部分が計算結果に反映されないため情報落ちが発生します。
+
+{(1.0)2×25＋(1.1)2×2-3}＋(1.0)2×2-4
+　(1.0)2×25＋(1.1)2×2-3
+＝(1.0)2×25＋(0.000000011)2×25
+→(1.0)2×25（情報落ちが発生）
+必要な仮数部が9ビットとなり、7ビットの仮数部からあふれた部分が計算結果に反映されないため情報落ちが発生します。
+
+{(1.0)2×25－(1.0)2×2-4}＋(1.1)2×2-3
+　(1.0)2×25－(1.0)2×2-4
+＝(1.0)2×25－(0.000000001)2×25
+→(1.0)2×25（情報落ちが発生）
+必要な仮数部が9ビットとなり、7ビットの仮数部からあふれた部分が計算結果に反映されないため情報落ちが発生します。
+
+→  
+
+当時は2進数に直して考えようとしてたけど、普通に計算するだけで良かったか・・。  
+基数が2進数なので、足し算したらすぐに繰り上がる。  
+最終的な結果として小数点以下が7bitを超えていないやつはAしかないという事。  
