--- a/勉強したいことリスト.md
+++ b/勉強したいことリスト.md
@@ -82,13 +82,7 @@ sql where 仕組み
 
 [システム構築の上流工程強化（非機能要求グレード）](https://www.ipa.go.jp/sec/softwareengineering/std/ent03-b.html)
 
-セッション
-
 [条件付確立](https://bellcurve.jp/statistics/course/6438.html)
-
-自分を制御する方法
-[【flier読書】自分をコントロールする力　非認知スキルの心理学](https://note.com/kajyou/n/n42691d789c66)
-アンガーマネジメント
 
 ilist list 違い
 [[C#]IEnumerableはListではない](https://7mc.org/2021/04/30/c_sharp_ienumerable_and_list.html)
@@ -96,19 +90,18 @@ ilist list 違い
 アクティブレポートの設定の仕方をまとめる。
 ダーティーリードあたりのロックの強度だったり、分離レベルだったりをまとめる。
 
-うるう年を求めるプログラムをまとめたい。
-EventAggregationとは？
-
 
 LEFT OUTER JOIN A
-RIGHT OUTER JOIN B ON
-A.aa = B.aa
+RIGHT OUTER JOIN B
+ON A.aa = B.aa
 ON A.bb = oya.bb
+
 この構文は
 
 LEFT OUTER JOIN A ON B
 A.aa = B.aa
 LEFT OUTER JOIN B ON oya
+
 でよいのでは説。
 
 
@@ -121,10 +114,6 @@ LEFT OUTER JOIN B ON oya
 クラサバ構成とは？
 クラサバ 古い
 https://xtech.nikkei.com/it/article/COLUMN/20070820/279919/
-
-棚卸しとは
-https://www.freee.co.jp/kb/kb-accounting/Inventory/
-
 
 sqlserver データベース名 一覧
 [SQL Server でデータベースの一覧を表示する](https://docs.microsoft.com/ja-jp/sql/relational-databases/databases/view-a-list-of-databases-on-an-instance-of-sql-server?view=sql-server-ver15)
@@ -202,6 +191,20 @@ C# send post
 
 [C言語でTCPソケットを使ってechoサーバーを実装してみた](https://reboooot.net/post/implement-tcp-echo-server/)
 [正規表現まとめ ＋ メールアドレスとURLの正規表現例](https://qiita.com/str32/items/a692073af32757618042)  
+
+・外人の動画のやつまとめたい
+・LPIC1のまとめ
+・最小限のAPIをたたいて結果を取得するサンプルが欲しい。
+→職場のserviceadapterでもパクるか。
+・最小限のAPI側のサンプルを作りたい。
+・フロントはVueで実装したい。
+
+・最小限のAccesser
+・最小限のUtilやJsonから値を取得するサンプル
+
+・なんかコンボボックスの実装飽きたな。
+全く手を付けていない。
+というか、手を付ける以前にもっと学ぶべき基礎的なモノが次から次へと出てきてそれどころではないのもある。
 
 ---
 
