--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -711,6 +711,92 @@ FROM
 
 ---
 
+## AWS (Amazon Web Services)
+
+アマゾンが提供するクラウドサービスの総称。  
+あくまで名前であって、メインはその中に含まれる細分化されたサービス群。  
+
+IaaS,PaaS分野に強く、IaaS市場では世界で約半分のシェアを持つ。  
+
+- Webサイト・Webサービスの構築・運用 → Amazon EC2  
+- データのバックアップ・災害対策 → Amazon S3  
+- ビッグデータの蓄積・分析・運用 → Amazon EMR  
+- 基幹・業務システムの構築 → Amazon  
+- 統合開発環境(IDE)の構築 → Amazon Cloud9,Amazon Lambda  
+
+## クラウドサービス
+
+インターネットを通して、データ、アプリ、基盤等を提供するサービス  
+
+種類としてIaaS,PaaS,SaaS等があるアレ。  
+
+- アマゾン → AWS(Amazon Web Services)  
+- グーグル → GCP(Google Cloud Platform)  
+- マイクロソフト → Azure  
+
+その中でも特にシェアが高いのがAWS  
+
+---
+
+## ルーティング
+
+宛先までの経路において複数のルーターをまたぐ場合、それぞれの経路における送信元IPアドレスと宛先IPアドレスの状態はどのようになるのかわからなかった。  
+
+[【CCNA講座】「ルーティング」これさえ見れば完全理解！【インフラエンジニア基礎入門 #9】](https://www.youtube.com/watch?v=_sWIKXnWNmU&t=1045s)  
+
+動画を見た感じでは、送信元IPと宛先IPは変わらず、MACアドレスが変わる模様。  
+IPはエンドツーエンドなので、始めと終わりは一貫している。  
+ルーティング先の特定はMACアドレスで行い、IPアドレスは終始変えない模様。  
+
+IPアドレスが変わるのはNAPTされた時の可能性。  
+NAPTで変換テーブルがある場合に関しては、その区間の送信元、送信先が変わるのかもしれない。  
+で、その通信が帰ってきたらNAPTの情報をもとに、アドレスの書き換えを行って、送信元に返す。  
+
+ここの認識がごっちゃになっていたから、複数のルーターを跨いだ場合にIPアドレスが変わってしまうのでは？という疑問に至ったと思われる。  
+そういうことかもしれない。  
+少しすっきりした。  
+応用情報の問題はよく考えられていますね。  
+
+---
+
+## プロキシサーバーへのアクセス
+
+プロキシサーバーを介したアクセス場合のIPアドレスはどうなるのかわからなかったのでまとめ。  
+直近の試験でいい感じの例題があったのでそのまま拝借。  
+
+プロキシサーバーを介したアクセスの場合、宛先IPをプロキシにするのは分かったけど、そうした場合、プロキシは何を判断して宛先を特定するのだろうか。  
+その依頼の中にさらに何か情報が渡されるのだろうか。  
+
+### 応用情報技術者過去問題 令和3年春期 午後問5  
+
+![a](https://www.ap-siken.com/kakomon/03_haru/img/pm05_1.gif)
+
+問題  
+販売代理会社の販売店のPCから旅行販売システムヘアクセスする場合，PCからFW#4に送信されるIPパケットの宛先IPアドレスは[b]となり，代理会社接続ルータからFW#1に送信されるIPパケットの送信元IPアドレスは[c]となる。  
+
+解説  
+[bについて]  
+販売代理会社の販売店のPCから旅行販売システムへアクセスする場合、プロキシサーバを経由することになります。  
+プロキシサーバを経由するWebアクセスでは、クライアントはプロキシサーバに対してHTTP(S)リクエストを送り、プロキシサーバはクライアントから受け取ったHTTP(S)リクエストの内容（GETメソッドのURL）を使って外部の宛先サーバに代理アクセスします。  
+
+![a](https://www.ap-siken.com/kakomon/03_haru/img/pm05_3.gif)  
+
+**IPはエンドツーエンドの通信を実現するプロトコルなので、宛先IPアドレスには最終的にパケットを届けたい相手を指定します。**  
+最終的な宛先というと"旅行販売システム"や"負荷分散装置"のIPアドレスを考えてしまいますが、プロキシサーバを経由する場合は、パケットを届けたい相手がプロキシサーバになるので、宛先IPアドレスにはプロキシサーバのIPアドレスを指定します。  
+経路途中の"FW#4"や"店舗接続ルータ"は最終的な宛先ではないので、宛先IPアドレスとするのは不適切です。  
+
+したがって、販売代理会社の販売店のPCがWebアクセスする際の宛先IPアドレスは、プロキシサーバの販売店側のIPアドレスである「192.168.0.3」になります。  
+
+[cについて]  
+前述のとおり、販売代理会社の販売店のPCからHTTP(S)リクエストを受け取ったプロキシサーバは、旅行販売システムに代理アクセスをします。  
+このときプロキシサーバから送出されるIPパケットは、宛先IPアドレスが 10.10.0.10、送信元IPアドレスが 192.168.0.2 になっています。  
+
+プロキシサーバが旅行販売システムにアクセスする際には"FW#3"を経由しますが、"FW#3"ではNAPTが動作しています。  
+NAPTでは、送信元IPアドレスについてプライベートIPアドレスとグローバルIPアドレスの変換を行うので、"FW#3"を経由する際に、送信元IPアドレスが"FW#3"の外部側のIPアドレスである「10.1.1.2」に書き換えられます。  
+"代理会社接続ルータ"に届くのはこの書き換えられたIPパケットなので、"代理会社接続ルータ"から"FW#1"に送信されるIPパケットの送信元IPアドレスは「10.1.1.2」になっています。  
+
+---
+
 ## 雑記
 
 [新人「先輩、参照の値渡しについてちゃんと理解してますか？😊」](https://qiita.com/yoshi_10_11/items/1b70ccb859891b57cb5a)  
@@ -754,68 +840,3 @@ for (int i = 1 ; i < 0 ; i++) {
     _ = 1;
 }
 ```
-
-
-
-・三浦母に名指しで呼ばれて頼りにされてうれしかった
-・応用情報合格発表→合格!!!!!!!!!
-
-
-AP021-0028
-https://web10.jitec.ipa.go.jp/js/input.html?examCode=AP
-
-合格率 24.3%
-https://www.ipa.go.jp/about/press/20220624.html
-普通に高いほうだと思ったけど、元年や俺が落ちた年でも24とか23なので、例年通りなのかもしれない。
-
-
-
-確実に嬉しいことが1つあった。
-三浦さんのお母さんに頼られたことだ。
-人って頼られるとこんなに気持ちが満たされるものなんだなって思った。
-
-
-何も考えない時間が心地よかった。
-早めに出て公園でボーっとしたけど、気持ちよかった。
-だけど、あそこ萬君が来るのね。
-朝ごはんをあそこで食べるらしい。
-
-
-確実に行動にも表れ始めた。
-狙って一番遅い時間に出社するようになった。
-
-
-今日は雨なので車がすごかった。
-めっちゃ混んでて、みんな時間に終われて運転が荒かったので、事故らないか心配だった。
-
-
-腕が筋肉痛。
-喜ばしいことだ。
-
-
-髪が乱れてきたので少し調整したい。
-
-
-今日もやばいので、エナドリも持ってきた。
-朝起きたら時点でめっちゃ辛かった。
-寝不足ってのもあるが、やっぱりてんしくを考え始めたら今の俺では役不足な気がしてならないからだ。
-頑張ったんだけどなぁ・・・。肝心の成果を残せていないからなぁ・・・。
-
-
-
-うかった・・・・・・・・・・・・・・・・・・・・・・・・・・・・・
-合格した・・・・・・・・・・・・・・
-早く家族に伝えたい。
-
-心臓がバクバクした。
-あり得ないくらいバクバクした。
-
-
-少し落ち着いた。
-冷静になってみたらこれは通過点でしかない。
-でもって、社会人2年目で合格している人や1発で合格している人もいる。
-俺なんて全然なんだ。
-そのことを忘れてはならない。
-
-
-
